--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,11 @@
             <artifactId>h2</artifactId>
             <version>1.4.193</version>
         </dependency>
-
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.7.Final</version>
+		</dependency>
     </dependencies>
 	<build>
 		<plugins>
