Clean up and refactoring conditional bean annotations (H2 vs simple in memory storage)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 management.security.enabled=false
 management.context-path=/manage
 endpoints.hypermedia.enabled=true
+spring.output.ansi.enabled=ALWAYS
